--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: ruby
 rvm:
   - 2.3.3
 
-install: gem install jekyll html-proofer
+install: bundle install && gem install html-proofer
 script: jekyll build && htmlproofer ./_site
 
 branches:
