--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ rvm:
   - 2.3.3
 
 install: bundle install && gem install html-proofer
-script: jekyll build && htmlproofer ./_site
+script: jekyll build && htmlproofer ./_site --disable-external
 
 branches:
   only:
