--- a/_config.yml
+++ b/_config.yml
@@ -210,6 +210,7 @@ plugins:
   - jekyll-gist
   - jekyll-feed
   - jemoji
+  - jekyll-include-cache #required for minimal-mistakes theme
 
 # mimic GitHub Pages with --safe
 whitelist:
